--- a/index.html
+++ b/index.html
@@ -85,12 +85,42 @@
                   </div>
                   <div class="info__cont">
                     <ul class="skill-item">
-                      <li class="skill-name" id="html">HTML</li>
-                      <li class="skill-name" id="css">CSS</li>
-                      <li class="skill-name" id="sass">SASS</li>
-                      <li class="skill-name" id="js">JAVASCRIPT</li>
-                      <li class="skill-name" id="jquery">JQUERY</li>
-                      <li class="skill-name" id="ps">PHOTOSHOP</li>
+                      <li class="skill" id="html">
+                        HTML
+                        <span class="skill__bar">
+                          <span class="skill__per" data-per="98"></span>
+                        </span>
+                      </li>
+                      <li class="skill" id="css">
+                        CSS
+                        <span class="skill__bar">
+                          <span class="skill__per" data-per="98"></span>
+                        </span>
+                      </li>
+                      <li class="skill" id="sass">
+                        SASS
+                        <span class="skill__bar">
+                          <span class="skill__per" data-per="85"></span>
+                        </span>
+                      </li>
+                      <li class="skill" id="js">
+                        JAVASCRIPT
+                        <span class="skill__bar">
+                          <span class="skill__per" data-per="90"></span>
+                        </span>
+                      </li>
+                      <li class="skill" id="jquery">
+                        JQUERY
+                        <span class="skill__bar">
+                          <span class="skill__per" data-per="80"></span>
+                        </span>
+                      </li>
+                      <li class="skill" id="ps">
+                        PHOTOSHOP
+                        <span class="skill__bar">
+                          <span class="skill__per" data-per="70"></span>
+                        </span>
+                      </li>
                     </ul>
                   </div>
                 </div>
@@ -133,7 +163,7 @@
                                 <div class="img-area">
                                   <img
                                     src="images/works/portfolio.png"
-                                    alt=""
+                                    alt="포트폴리오"
                                   />
                                 </div>
                                 <h4 class="title">포트폴리오</h4>
@@ -146,7 +176,10 @@
                                 target="_blank"
                               >
                                 <div class="img-area">
-                                  <img src="images/works/carrot.png" alt="" />
+                                  <img
+                                    src="images/works/carrot.png"
+                                    alt="당근 게임"
+                                  />
                                 </div>
                                 <h4 class="title">당근을 찾아라!</h4>
                               </a>
@@ -155,8 +188,10 @@
                             <div class="contents on" data-type="media">
                               <a href="works/gaon/gaon.html" target="_blank">
                                 <div class="img-area">
-                                  보내
-                                  <img src="images/works/gaon.png" alt="" />
+                                  <img
+                                    src="images/works/gaon.png"
+                                    alt="가온스튜디오"
+                                  />
                                 </div>
                                 <h4 class="title">가온스튜디오</h4>
                               </a>
@@ -165,39 +200,42 @@
                             <div class="contents on" data-type="media">
                               <a href="works/tforu/tforu.html" target="_blank">
                                 <div class="img-area">
-                                  <img src="images/works/tforu.png" alt="" />
+                                  <img
+                                    src="images/works/tforu.png"
+                                    alt="티포유"
+                                  />
                                 </div>
                                 <h4 class="title">티포유</h4>
+                              </a>
+                            </div>
+
+                            <div class="contents on" data-type="pc">
+                              <a
+                                href="http://www.steel-n.com/e-sales/html_kr/new_demand/c80new_nd01.html"
+                                target="_blank"
+                              >
+                                <div class="img-area">
+                                  <img
+                                    src="images/works/steel.png"
+                                    alt="스틸앤닷컴"
+                                  />
+                                </div>
+                                <h4 class="title">스틸앤닷컴</h4>
                               </a>
                             </div>
 
                             <div class="contents on" data-type="mobile">
                               <a
-                                href="works/carrot/carrot_game.html"
+                                href="https://www.posirak.posco.co.kr:5020/common/s20m02-front/pages/s20m0util/userDownload.html"
                                 target="_blank"
                               >
                                 <div class="img-area">
-                                  <img src="images/works/carrot.png" alt="" />
+                                  <img
+                                    src="images/works/posirak.png"
+                                    alt="포시락"
+                                  />
                                 </div>
-                                <h4 class="title">당근을 찾아라!</h4>
-                              </a>
-                            </div>
-
-                            <div class="contents on" data-type="mobile">
-                              <a href="works/gaon/gaon.html" target="_blank">
-                                <div class="img-area">
-                                  <img src="images/works/gaon.png" alt="" />
-                                </div>
-                                <h4 class="title">가온스튜디오</h4>
-                              </a>
-                            </div>
-
-                            <div class="contents on" data-type="pc">
-                              <a href="works/tforu/tforu.html" target="_blank">
-                                <div class="img-area">
-                                  <img src="images/works/tforu.png" alt="" />
-                                </div>
-                                <h4 class="title">티포유</h4>
+                                <h4 class="title">포시락</h4>
                               </a>
                             </div>
                           </div>
