--- a/index.html
+++ b/index.html
@@ -56,72 +56,82 @@
                     </div>
 
                     <div class="info__cont-group">
-                      <h3>Career</h3>
-                      <ul>
-                        <li>의류사이트 웹퍼블리셔</li>
-                        <li>현) 포스코 협력 웹퍼블리셔</li>
-                      </ul>
-                    </div>
+                      <div class="info__cont-left">
+                        <!-- 이렇게 한묶음 -->
+                        <div class="info__cont-list">
+                          <h3>Career</h3>
+                          <ul>
+                            <li>의류사이트 웹퍼블리셔</li>
+                            <li>현) 포스코 협력 웹퍼블리셔</li>
+                          </ul>
+                        </div>
 
-                    <div class="info__cont-group">
-                      <h3>Project</h3>
-                      <ul>
-                        <li>포스코 ESG성과 데이터 통합관리</li>
-                        <li>포스코 FTA원산지Portal</li>
-                        <li>포스코 steel-n-com</li>
-                        <li>포스코 글로벌표준문서관리시스템</li>
-                        <li>포스코 사외도시락</li>
-                        <li>포스코 생산속보</li>
-                        <li>포스코 상태관리시스템</li>
-                        <li>포스코 스마트안전APP</li>
-                        <li>포스코 오픈연구소</li>
-                        <li>포스코 출하속보</li>
-                        <li>포스코 REPOM</li>
-                        <li>포스코 방문자 태깅 모니터링</li>
-                        <li>가온스튜디오(DAZZLING)</li>
-                        <li>T4U 교사 포털 사이트</li>
-                      </ul>
+                        <li class="info__cont-list">
+                          <h3>Project</h3>
+                          <ul>
+                            <li>포스코 ESG성과 데이터 통합관리</li>
+                            <li>포스코 FTA원산지Portal</li>
+                            <li>포스코 steel-n-com</li>
+                            <li>포스코 글로벌표준문서관리시스템</li>
+                            <li>포스코 사외도시락</li>
+                            <li>포스코 생산속보</li>
+                            <li>포스코 상태관리시스템</li>
+                            <li>포스코 스마트안전APP</li>
+                            <li>포스코 오픈연구소</li>
+                            <li>포스코 출하속보</li>
+                            <li>포스코 REPOM</li>
+                            <li>포스코 방문자 태깅 모니터링</li>
+                            <li>가온스튜디오(DAZZLING)</li>
+                            <li>T4U 교사 포털 사이트</li>
+                          </ul>
+                        </li>
+                      </div>
+
+                      <div class="info__cont-right">
+                        <!-- 또 이렇게 한묵음 -->
+                        <div class="info__cont-list">
+                          <h3>Skill</h3>
+                          <ul class="skill-item">
+                            <li class="skill" id="html">
+                              HTML
+                              <span class="skill__bar">
+                                <span class="skill__per" data-per="98"></span>
+                              </span>
+                            </li>
+                            <li class="skill" id="css">
+                              CSS
+                              <span class="skill__bar">
+                                <span class="skill__per" data-per="98"></span>
+                              </span>
+                            </li>
+                            <li class="skill" id="sass">
+                              SASS
+                              <span class="skill__bar">
+                                <span class="skill__per" data-per="85"></span>
+                              </span>
+                            </li>
+                            <li class="skill" id="js">
+                              JAVASCRIPT
+                              <span class="skill__bar">
+                                <span class="skill__per" data-per="90"></span>
+                              </span>
+                            </li>
+                            <li class="skill" id="jquery">
+                              JQUERY
+                              <span class="skill__bar">
+                                <span class="skill__per" data-per="80"></span>
+                              </span>
+                            </li>
+                            <li class="skill" id="ps">
+                              PHOTOSHOP
+                              <span class="skill__bar">
+                                <span class="skill__per" data-per="70"></span>
+                              </span>
+                            </li>
+                          </ul>
+                        </div>
+                      </div>
                     </div>
-                  </div>
-                  <div class="info__cont">
-                    <ul class="skill-item">
-                      <li class="skill" id="html">
-                        HTML
-                        <span class="skill__bar">
-                          <span class="skill__per" data-per="98"></span>
-                        </span>
-                      </li>
-                      <li class="skill" id="css">
-                        CSS
-                        <span class="skill__bar">
-                          <span class="skill__per" data-per="98"></span>
-                        </span>
-                      </li>
-                      <li class="skill" id="sass">
-                        SASS
-                        <span class="skill__bar">
-                          <span class="skill__per" data-per="85"></span>
-                        </span>
-                      </li>
-                      <li class="skill" id="js">
-                        JAVASCRIPT
-                        <span class="skill__bar">
-                          <span class="skill__per" data-per="90"></span>
-                        </span>
-                      </li>
-                      <li class="skill" id="jquery">
-                        JQUERY
-                        <span class="skill__bar">
-                          <span class="skill__per" data-per="80"></span>
-                        </span>
-                      </li>
-                      <li class="skill" id="ps">
-                        PHOTOSHOP
-                        <span class="skill__bar">
-                          <span class="skill__per" data-per="70"></span>
-                        </span>
-                      </li>
-                    </ul>
                   </div>
                 </div>
               </div>
