--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                           </ul>
                         </div>
 
-                        <li class="info__cont-list">
+                        <div class="info__cont-list">
                           <h3>Project</h3>
                           <ul>
                             <li>포스코 ESG성과 데이터 통합관리</li>
@@ -84,7 +84,7 @@
                             <li>가온스튜디오(DAZZLING)</li>
                             <li>T4U 교사 포털 사이트</li>
                           </ul>
-                        </li>
+                        </div>
                       </div>
 
                       <div class="info__cont-right">
