--- a/index.html
+++ b/index.html
@@ -33,6 +33,9 @@
       <main>
         <div class="ly-contents__wrap">
           <div class="ly-contents__visual">
+            <div class="img-area">
+              <img src="images/sequence/sky1.jpg" alt="메인비주얼" />
+            </div>
             <div class="txt-area">
               <h2><span>CREATIVE</span>PUBLISHER</h2>
               <p>
@@ -57,7 +60,6 @@
 
                     <div class="info__cont-group">
                       <div class="info__cont-left">
-                        <!-- 이렇게 한묶음 -->
                         <div class="info__cont-list">
                           <h3>Career</h3>
                           <ul>
@@ -88,7 +90,6 @@
                       </div>
 
                       <div class="info__cont-right">
-                        <!-- 또 이렇게 한묵음 -->
                         <div class="info__cont-list">
                           <h3>Skill</h3>
                           <ul class="skill-item">
@@ -141,18 +142,22 @@
             <section class="ly-contents__section" id="portfolio">
               <div class="contents-area">
                 <div class="tab-area">
-                  <ul class="tab-area__btn nav">
-                    <li class="on">
-                      <span class="tab__btn">Web</span>
-                    </li>
+                  <div class="nav">
+                    <ul class="tab-area__btn">
+                      <li class="on">
+                        <span class="tab__btn">Web</span>
+                      </li>
 
-                    <li>
-                      <span class="tab__btn">Design</span>
-                    </li>
-                    <li>
-                      <span class="tab__btn">contact</span>
-                    </li>
-                  </ul>
+                      <li>
+                        <span class="tab__btn">Design</span>
+                      </li>
+
+                      <li>
+                        <span class="tab__btn">contact</span>
+                      </li>
+                    </ul>
+                  </div>
+
                   <div class="tab-area__contents">
                     <div class="tab__contents on">
                       <div class="sort-area">
@@ -252,7 +257,11 @@
                         </div>
                       </div>
                     </div>
+                    <!-- //tab__contents -->
+
                     <div class="tab__contents">안녕하세요</div>
+                    <!-- //tab__contents -->
+
                     <div class="tab__contents">
                       <div class="msg-area">
                         <textarea
@@ -265,6 +274,7 @@
                         </button>
                       </div>
                     </div>
+                    <!-- //tab__contents -->
                   </div>
                 </div>
               </div>
