--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <script src="js/ui.js" defer></script>
     <title>Kim Seo Hyun</title>
   </head>
-  <body>
+  <body class="stop__scroll">
     <div class="ly-wrap">
       <header>
         <div class="ly-header">
@@ -33,16 +33,25 @@
       <main>
         <div class="ly-contents__wrap">
           <div class="ly-contents__visual">
-            <div class="img-area">
-              <img src="images/sequence/sky1.jpg" alt="메인비주얼" />
-            </div>
-            <div class="txt-area">
-              <h2><span>CREATIVE</span>PUBLISHER</h2>
-              <p>
-                웹의 가치를 만들고 참신하며 새로운 디자인에 대한 지속적인 관심과
-                효율적인 시멘틱 웹페이지 구축을 위하여 늘 준비되어 있는
-                웹퍼블리셔 김서현입니다.
-              </p>
+            <div class="visual__intro-wrap">
+              <div class="intro__title">
+                <span class="title">CREATIVE</span>
+                <span class="title">WEB PUBLISHER</span>
+                <span class="title">KIM SEO HYUN</span>
+              </div>
+              <div class="visual__real">
+                <div class="img-area">
+                  <img src="images/sequence/sky1.jpg" alt="메인비주얼" />
+                </div>
+                <div class="txt-area">
+                  <h2><span>CREATIVE</span>PUBLISHER</h2>
+                  <p>
+                    웹의 가치를 만들고 참신하며 새로운 디자인에 대한 지속적인
+                    관심과 효율적인 시멘틱 웹페이지 구축을 위하여 늘 준비되어
+                    있는 웹퍼블리셔 김서현입니다.
+                  </p>
+                </div>
+              </div>
             </div>
           </div>
           <!-- //ly-contents__visual -->
@@ -251,6 +260,18 @@
                                   />
                                 </div>
                                 <h4 class="title">포시락</h4>
+                              </a>
+                            </div>
+
+                            <div class="contents on" data-type="media">
+                              <a href="works/mog/mog.html" target="_blank">
+                                <div class="img-area">
+                                  <img
+                                    src="images/works/mog.png"
+                                    alt="포시락"
+                                  />
+                                </div>
+                                <h4 class="title">MOG</h4>
                               </a>
                             </div>
                           </div>
