--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="./css/ui.css" />
-    <script type="text" src="./data/item.json"></script>
     <script src="./js/vendor/jquery-1.11.3.min.js"></script>
     <script src="js/ui.js" defer></script>
     <title>Kim Seo Hyun</title>
@@ -103,37 +102,37 @@
                           <h3>Skill</h3>
                           <ul class="skill-item">
                             <li class="skill" id="html">
-                              HTML
+                              <span class="skill__title">HTML</span>
                               <span class="skill__bar">
                                 <span class="skill__per" data-per="98"></span>
                               </span>
                             </li>
                             <li class="skill" id="css">
-                              CSS
+                              <span class="skill__title">CSS</span>
                               <span class="skill__bar">
                                 <span class="skill__per" data-per="98"></span>
                               </span>
                             </li>
                             <li class="skill" id="sass">
-                              SASS
+                              <span class="skill__title">SASS</span>
                               <span class="skill__bar">
                                 <span class="skill__per" data-per="85"></span>
                               </span>
                             </li>
                             <li class="skill" id="js">
-                              JAVASCRIPT
+                              <span class="skill__title">JAVASCRIPT</span>
                               <span class="skill__bar">
                                 <span class="skill__per" data-per="90"></span>
                               </span>
                             </li>
                             <li class="skill" id="jquery">
-                              JQUERY
+                              <span class="skill__title">JQUERY</span>
                               <span class="skill__bar">
                                 <span class="skill__per" data-per="80"></span>
                               </span>
                             </li>
                             <li class="skill" id="ps">
-                              PHOTOSHOP
+                              <span class="skill__title">PHOTOSHOP</span>
                               <span class="skill__bar">
                                 <span class="skill__per" data-per="70"></span>
                               </span>
