--- a/study_animation/index.html
+++ b/study_animation/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
+    <!-- 미니언즈 완성하기 -->
     <!-- minions -->
     <div class="wrap">
       <h2>MINIONS</h2>
